--- a/Fitness_club/Registration.xaml
+++ b/Fitness_club/Registration.xaml
@@ -25,20 +25,18 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
             </Grid.RowDefinitions>
             <Image Grid.Column="0"  Grid.Row="0"  Source="picture/logotype.png" Width="80">
             </Image>
             <TextBlock Text="Регистрация" Grid.Column="1" Grid.ColumnSpan="3" FontSize="50" Foreground="#312B69" FontWeight="DemiBold"/>
-            <TextBlock Text="Имя" Grid.Column="0" Grid.Row="1" Margin="18" FontWeight="DemiBold" FontSize="20"/>
-            <TextBox x:Name="Email" Grid.Column="1" Grid.Row="2" Background="Silver" Margin="10,29" Grid.ColumnSpan="2" Text="Email" FontSize="25" Foreground="#626262"/>
-            <TextBox x:Name="Password" Grid.Column="1" Grid.Row="3" Background="Silver" Margin="10,29" Grid.ColumnSpan="2" Text="Password" FontSize="25" Foreground="#626262" MaxLength="6"/>
-            <StackPanel Grid.Column="1" Grid.Row="4" Margin="10,35" >
-                <Button Content="Вход"  Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" />
-            </StackPanel>
-            <StackPanel Grid.Column="2" Grid.Row="6" Margin="10,35" >
-                <Button Content="Авторизоваться"  Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White"/>
+            <TextBlock Text="Введите данные:" Grid.Column="0" Grid.Row="1" Padding="20" Grid.ColumnSpan="2" FontSize="25" Foreground="#626262"/>
+            <TextBox x:Name="name" Grid.Column="0" Grid.Row="2" Background="Silver" Margin="40,30,30,25"  Grid.ColumnSpan="3" Text="Имя" FontSize="23" Foreground="#626262"/>
+            <TextBox x:Name="fname" Grid.Column="3" Grid.Row="2" Background="Silver" Margin="40,30,30,25" Grid.ColumnSpan="3" Text="Фамилия" FontSize="23" Foreground="#626262" MaxLength="6"/>
+            <TextBox x:Name="login" Grid.Column="0" Grid.Row="3" Background="Silver" Margin="40,30,30,25" Grid.ColumnSpan="3" Text="Логин" FontSize="23" Foreground="#626262"/>
+            <TextBox x:Name="psswrd" Grid.Column="0" Grid.Row="4" Background="Silver" Margin="40,30,30,25" Grid.ColumnSpan="3" Text="Пароль" FontSize="23" Foreground="#626262" MaxLength="6"/>
+            <TextBox x:Name="phone" Grid.Column="3" Grid.Row="3" Background="Silver" Margin="40,30,30,25" Grid.ColumnSpan="3" Text="Телефон" FontSize="23" Foreground="#626262" MaxLength="6"/>
+            <StackPanel Grid.Column="3" Grid.Row="4"  Grid.ColumnSpan="3">
+                <Button Content="Авторизоваться" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Regis_Click"/>
             </StackPanel>
         </Grid>
     </Grid>
