--- a/Fitness_club/login_form.xaml
+++ b/Fitness_club/login_form.xaml
@@ -29,10 +29,10 @@
         <TextBox x:Name="Email" Grid.Column="1" Grid.Row="2" Background="Silver" Margin="10,29" Grid.ColumnSpan="2" Text="Email" FontSize="25" Foreground="#626262"/>
         <TextBox x:Name="Password" Grid.Column="1" Grid.Row="3" Background="Silver" Margin="10,29" Grid.ColumnSpan="2" Text="Password" FontSize="25" Foreground="#626262" MaxLength="6"/>
             <StackPanel Grid.Column="1" Grid.Row="4" Margin="10,35" >
-        <Button Content="Вход"  Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" />
+        <Button Content="Вход"  Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Click="Enter_Click"/>
             </StackPanel>
             <StackPanel Grid.Column="2" Grid.Row="6" Margin="10,35" >
-            <Button Content="Авторизоваться"  Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White"/>
+            <Button Content="Авторизоваться"  Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Click="Autor_Click"/>
             </StackPanel>
         </Grid>
     </Grid>
