--- a/Fitness_club/Kabinet.xaml
+++ b/Fitness_club/Kabinet.xaml
@@ -26,14 +26,17 @@
             </Grid.RowDefinitions>
             <Image Grid.Column="0" Grid.Row="0"   Source="picture/logotype.png" Width="100">
             </Image>
-            <TextBlock Text="Добро пожаловать!" Grid.Column="1" Grid.ColumnSpan="3" FontSize="40" Foreground="#312B69" FontWeight="DemiBold"/>
+            <TextBlock x:Name="user" Text="Добро пожаловать!" Grid.Column="1" Grid.ColumnSpan="3" FontSize="40" Foreground="#312B69" FontWeight="DemiBold"/>
             <StackPanel Grid.Column="0" Grid.Row="1"  Grid.ColumnSpan="2">
-                <Button Content="Пополнить баланс" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" />
+                <Button Content="Пополнить баланс" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Balance_Click" />
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="2"  Grid.ColumnSpan="2">
-                <Button Content="Выход" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49"/>
+            <StackPanel Grid.Column="0" Grid.Row="3"  Grid.ColumnSpan="2">
+                <Button Content=" Узнать Баланс" Margin="40,30,40,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Know_Click"/>
             </StackPanel>
-            <StackPanel Grid.Column="2" Grid.Row="1"  Grid.ColumnSpan="2">
+            <StackPanel Grid.Column="0" Grid.Row="4"  Grid.ColumnSpan="2">
+                <Button Content="Выход" Margin="70,30,70,20" Background="#626262" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Back_Click"/>
+            </StackPanel>
+            <StackPanel Grid.Row="2"  Grid.ColumnSpan="2">
                 <Button Content="Абонемент" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49"/>
             </StackPanel>
             
