--- a/Fitness_club/Kabinet.xaml
+++ b/Fitness_club/Kabinet.xaml
@@ -37,7 +37,7 @@
                 <Button Content="Выход" Margin="70,30,70,20" Background="#626262" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Back_Click"/>
             </StackPanel>
             <StackPanel Grid.Row="2"  Grid.ColumnSpan="2">
-                <Button Content="Абонемент" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49"/>
+                <Button Content="Абонемент" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="abbuy_Click"/>
             </StackPanel>
             
         </Grid>
