--- a/Fitness_club/Abonement.xaml
+++ b/Fitness_club/Abonement.xaml
@@ -23,14 +23,17 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <Image Grid.Column="0" Grid.Row="0"   Source="picture/logotype.png" Width="100">
             </Image>
             <TextBlock x:Name="user" Text="Абонемент" Grid.Column="1" Grid.ColumnSpan="3" FontSize="40" Foreground="#312B69" FontWeight="DemiBold"/>
             <TextBlock Text="Введите данные:" Grid.Column="0" Grid.Row="1" Padding="20" Grid.ColumnSpan="2" FontSize="25" Foreground="#626262"/>
+            <TextBlock Text="Сумма:" Grid.Column="1" Grid.Row="5" Padding="20" Margin="150,0,0,0" Grid.ColumnSpan="2" FontSize="25" Foreground="#626262"/>
+            <TextBox x:Name="Summa" Grid.Column="2" Grid.Row="5" Background="Silver" Margin="20,10,20,10"  FontSize="23" Foreground="#626262"/>
             <TextBox x:Name="Aname" Grid.Column="0" Grid.Row="2" Background="Silver" Margin="20,10,20,10" Text="Имя" FontSize="23" Foreground="#626262"/>
             <TextBox x:Name="Asecname" Grid.Column="0" Grid.Row="3" Background="Silver" Margin="20,10,20,10" Text="Фамилия" FontSize="23" Foreground="#626262" MaxLength="6"/>
-            <ComboBox x:Name="Abb" FontSize="25" Foreground="#626262" Margin="20,10,20,10" Grid.Row="4" Grid.Column="0" >
+            <ComboBox x:Name="Abb" ItemsSource="{Binding }" FontSize="25" Foreground="#626262" Margin="20,10,20,10" Grid.Row="4" Grid.Column="0">
                 <!--<ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Type }"/>
@@ -48,8 +51,11 @@
             <DatePicker x:Name="fin" Grid.Column="2" Grid.Row="3"  Margin="20,10,20,10" FontSize="20"/>
          
             <TextBox x:Name="much" Grid.Column="2" Grid.Row="4" Background="Silver" Margin="20,10,20,10" Text="Тренировка..." FontSize="23" Foreground="#626262"/>
-            <StackPanel Grid.Column="1" Grid.Row="5" >
-                <Button Content="Оплатить" Margin="40,10,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Buy_Click"/>
+            <StackPanel Grid.Column="0" Grid.Row="5" >
+                <Button Content="Создать" Margin="40,10,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Width="120" Height="49" Click="Buy_Click"/>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="6" >
+                <Button Content="Оплатить" Margin="40,10,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="pay_Click"/>
             </StackPanel>
         </Grid>
         </Grid>
