--- a/Fitness_club/Kabinet.xaml
+++ b/Fitness_club/Kabinet.xaml
@@ -19,6 +19,7 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
+                
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -33,8 +34,8 @@
             <StackPanel Grid.Column="0" Grid.Row="3"  Grid.ColumnSpan="2">
                 <Button Content=" Узнать Баланс" Margin="40,30,40,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Know_Click"/>
             </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="4"  Grid.ColumnSpan="2">
-                <Button Content="Выход" Margin="70,30,70,20" Background="#626262" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Back_Click"/>
+            <StackPanel Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2">
+                <Button Content="Выйти из учетной записи" Margin="40,30,40,20" Background="#626262" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Back_Click" />
             </StackPanel>
             <StackPanel Grid.Row="2"  Grid.ColumnSpan="2">
                 <Button Content="Абонемент" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="abbuy_Click"/>
