--- a/Fitness_club/MainWindow.xaml
+++ b/Fitness_club/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Fitness_club"
         mc:Ignorable="d"
-        Title="MainWindow" Height="590" Width="800">
+        Title="MainWindow" Height="590" Width="800" ResizeMode="NoResize">
     <Grid Background="White">
         <Frame NavigationUIVisibility="Hidden" x:Name="Enter"/>
     </Grid>
