--- a/Fitness_club/Kabinet.xaml
+++ b/Fitness_club/Kabinet.xaml
@@ -27,17 +27,17 @@
             </Grid.RowDefinitions>
             <Image Grid.Column="0" Grid.Row="0"   Source="picture/logotype.png" Width="100">
             </Image>
+            <TextBox x:Name="Kuser" Grid.Row="1" Grid.Column="0" Margin="40,30,30,20" BorderBrush="#00000000" FontSize="20" Foreground=""/>
+            <TextBox x:Name="balance" Grid.Row="1" Grid.Column="1" Margin="40,30,30,20" BorderBrush="#00000000" FontSize="20"/>
+            
             <TextBlock x:Name="user" Text="Добро пожаловать!" Grid.Column="1" Grid.ColumnSpan="3" FontSize="40" Foreground="#312B69" FontWeight="DemiBold"/>
-            <StackPanel Grid.Column="0" Grid.Row="1"  Grid.ColumnSpan="2">
+            <StackPanel Grid.Column="0" Grid.Row="2"  Grid.ColumnSpan="2">
                 <Button Content="Пополнить баланс" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Balance_Click" />
-            </StackPanel>
-            <StackPanel Grid.Column="0" Grid.Row="3"  Grid.ColumnSpan="2">
-                <Button Content=" Узнать Баланс" Margin="40,30,40,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Know_Click"/>
             </StackPanel>
             <StackPanel Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2">
                 <Button Content="Выйти из учетной записи" Margin="40,30,40,20" Background="#626262" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="Back_Click" />
             </StackPanel>
-            <StackPanel Grid.Row="2"  Grid.ColumnSpan="2">
+            <StackPanel Grid.Row="3"  Grid.ColumnSpan="2">
                 <Button Content="Абонемент" Margin="40,30,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="abbuy_Click"/>
             </StackPanel>
             
