--- a/Fitness_club/Abonement.xaml
+++ b/Fitness_club/Abonement.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Fitness_club"
       mc:Ignorable="d" 
-     d:DesignHeight="450" d:DesignWidth="800"
+     d:DesignHeight="550" d:DesignWidth="800"
       Background="White"
       Title="Abonement" >
 
@@ -29,30 +29,34 @@
             </Image>
             <TextBlock x:Name="user" Text="Абонемент" Grid.Column="1" Grid.ColumnSpan="3" FontSize="40" Foreground="#312B69" FontWeight="DemiBold"/>
             <TextBlock Text="Введите данные:" Grid.Column="0" Grid.Row="1" Padding="20" Grid.ColumnSpan="2" FontSize="25" Foreground="#626262"/>
-            <TextBlock Text="Сумма:" Grid.Column="1" Grid.Row="5" Padding="20" Margin="150,0,0,0" Grid.ColumnSpan="2" FontSize="25" Foreground="#626262"/>
-            <TextBox x:Name="Summa" Grid.Column="2" Grid.Row="5" Background="Silver" Margin="20,10,20,10"  FontSize="23" Foreground="#626262"/>
-            <TextBox x:Name="Aname" Grid.Column="0" Grid.Row="2" Background="Silver" Margin="20,10,20,10" Text="Имя" FontSize="23" Foreground="#626262"/>
-            <TextBox x:Name="Asecname" Grid.Column="0" Grid.Row="3" Background="Silver" Margin="20,10,20,10" Text="Фамилия" FontSize="23" Foreground="#626262" MaxLength="6"/>
-            <ComboBox x:Name="Abb" ItemsSource="{Binding }" FontSize="25" Foreground="#626262" Margin="20,10,20,10" Grid.Row="4" Grid.Column="0">
+            <TextBlock Text="Сумма:" Grid.Column="2" Grid.Row="4" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <TextBox x:Name="Summa" Grid.Column="2" Grid.Row="4" Background="Silver" Margin="30,30,30,10"  FontSize="23" Foreground="#626262"/>
+            <TextBlock Text="Имя:" Grid.Column="0" Grid.Row="2" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <TextBox x:Name="Aname" Grid.Column="0" Grid.Row="2" Background="Silver" Margin="30,30,30,10" FontSize="23" Foreground="#626262"/>
+            <TextBlock Text="Фамилия:" Grid.Column="0" Grid.Row="3" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <TextBox x:Name="Asecname" Grid.Column="0" Grid.Row="3" Background="Silver" Margin="30,30,30,10"  FontSize="23" Foreground="#626262" MaxLength="6"/>
+            <TextBlock Text="Абонемент:" Grid.Column="0" Grid.Row="4" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <ComboBox x:Name="Abb" ItemsSource="{Binding }" FontSize="25" Foreground="#626262" Margin="30,30,30,10" Grid.Row="4" Grid.Column="0">
                 <!--<ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Type }"/>
                     </DataTemplate>
                 </ComboBox.ItemTemplate> -->
             </ComboBox>
-
-            <ComboBox x:Name="Zali"  FontSize="25" Foreground="#626262" Margin="20,10,20,10" Grid.Row="2" Grid.Column="1">
+            <TextBlock Text="Тип:" Grid.Column="1" Grid.Row="2" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <ComboBox x:Name="Zali"  FontSize="25" Foreground="#626262" Margin="30,30,30,10" Grid.Row="2" Grid.Column="1">
             </ComboBox>
-
-            <ComboBox x:Name="trenrk"  FontSize="25" Foreground="#626262" Margin="20,10,20,10" Grid.Row="3" Grid.Column="1">
+            <TextBlock Text="Абонемент:" Grid.Column="1" Grid.Row="3" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <ComboBox x:Name="trenrk"  FontSize="25" Foreground="#626262" Margin="30,30,30,10" Grid.Row="3" Grid.Column="1">
             </ComboBox>
-            <TextBox x:Name="sckaf" Grid.Column="1" Grid.Row="4" Background="Silver" Margin="20,10,20,10" Text="Шкафчик" FontSize="23" Foreground="#626262" />
-            <DatePicker x:Name="start" Grid.Column="2" Grid.Row="2"  Margin="20,10,20,10" FontSize="20"/>
-            <DatePicker x:Name="fin" Grid.Column="2" Grid.Row="3"  Margin="20,10,20,10" FontSize="20"/>
-         
-            <TextBox x:Name="much" Grid.Column="2" Grid.Row="4" Background="Silver" Margin="20,10,20,10" Text="Тренировка..." FontSize="23" Foreground="#626262"/>
-            <StackPanel Grid.Column="0" Grid.Row="5" >
-                <Button Content="Создать" Margin="40,10,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Width="120" Height="49" Click="Buy_Click"/>
+            <TextBlock Text="Начало:" Grid.Column="2" Grid.Row="2" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <DatePicker x:Name="start" Grid.Column="2" Grid.Row="2"  Margin="30,30,30,10" FontSize="20"/>
+            <TextBlock Text="Конец:" Grid.Column="2" Grid.Row="3" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <DatePicker x:Name="fin" Grid.Column="2" Grid.Row="3"  Margin="30,30,30,10" FontSize="20"/>
+            <TextBlock Text="В неделю:" Grid.Column="1" Grid.Row="4" Margin="30,10,30,0" FontSize="15" Foreground="#626262"/>
+            <TextBox x:Name="much" Grid.Column="1" Grid.Row="4" Background="Silver" Margin="30,30,30,10" FontSize="23" Foreground="#626262"/>
+            <StackPanel Grid.Column="1" Grid.Row="5" >
+                <Button Content="Создать" Margin="40,10,30,20" Background="#626262" FontSize="20" FontWeight="Regular" Foreground="White" Width="120" Height="49" Click="Buy_Click"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Grid.Row="6" >
                 <Button Content="Оплатить" Margin="40,10,30,20" Background="#312B69" FontSize="20" FontWeight="Regular" Foreground="White" Height="49" Click="pay_Click"/>
